--- a/reset-password.html
+++ b/reset-password.html
@@ -101,7 +101,8 @@
 
       // Uygulamaya yönlendir
       function openApp() {
-        window.location.href = "https://play.google.com/store/apps/details?id=com.ilkerkamis.myapp";
+        window.location.href =
+          "testapp:///components/pages/auth/reset-password";
       }
     </script>
   </head>
