--- a/reset-password.html
+++ b/reset-password.html
@@ -99,10 +99,13 @@
         }
       });
 
-      // Uygulamaya yönlendir
       function openApp() {
-        window.location.href =
-          "testapp:///components/pages/auth/reset-password";
+        const hash = window.location.hash || "";
+
+        const deeplink =
+          "testapp:///components/pages/auth/reset-password" + hash;
+
+        window.location.href = deeplink;
       }
     </script>
   </head>
