--- a/reset-password.html
+++ b/reset-password.html
@@ -85,26 +85,21 @@
       }
     </style>
     <script>
-      // URL parametrelerinden email çek (varsa)
-      function getQueryParam(key) {
-        const params = new URLSearchParams(window.location.search);
-        return params.get(key);
-      }
-
-      document.addEventListener("DOMContentLoaded", () => {
-        const emailSpan = document.getElementById("user-email");
-        const email = getQueryParam("email");
-        if (email && emailSpan) {
-          emailSpan.textContent = email;
-        }
-      });
-
       function openApp() {
-        const hash = window.location.hash || "";
-        const deeplink =
-          "testapp:///components/pages/auth/reset-password" + hash;
+        const path = "components/pages/auth/reset-password";
+        const query = window.location.search;
+        const hash = window.location.hash;
 
-        window.location.href = deeplink;
+        const intentUrl = `intent://${path}${query}${hash}#Intent;scheme=testapp;package=com.ilkerkamis.myapp;S.browser_fallback_url=https://play.google.com/store/apps/details?id=com.ilkerkamis.myapp;end`;
+
+        if (/Android/i.test(navigator.userAgent)) {
+          window.location.href = intentUrl;
+          setTimeout(() => {
+            window.location-upload = "https://play.google.com/store/apps/details?id=com.ilkerkamis.myapp";
+          }, 2000);
+        } else {
+          window.location.href = `testapp:///${path}${query}${hash}`;
+        }
       }
     </script>
   </head>
@@ -117,9 +112,7 @@
       <h1>Şifreni Sıfırla 🔐</h1>
       <p>Şifreni sıfırlamak için uygulamayı aç ve yeni şifreni belirle.</p>
       <p class="email" id="user-email"></p>
-      <a href="#" class="app-button" onclick="openApp(); return false;">
-        Uygulamayı Aç
-      </a>
+      <button class="app-button" onclick="openApp()">Uygulamayı Aç</button>
       <p class="small">
         Bu işlemi sen talep etmediysen, bu sayfayı kapatabilirsin.
       </p>
