new reset-password.

--- a/reset-password.html
+++ b/reset-password.html
@@ -99,13 +99,20 @@
         }
       });
 
-      // Uygulamaya yönlendir
+      // UYGULAMAYI AÇ (DÜZELTİLMİŞ HALİ)
       function openApp() {
-        const hash = window.location.hash || "";
+        const hash = window.location.hash.substring(1); // #access_token=... kısmını al
+        if (!hash) return;
 
-        const deeplink =
-          "testapp:///components/pages/auth/reset-password" + hash;
+        // Hash'i query string'e çevir: access_token=... → ?access_token=...
+        const params = new URLSearchParams(hash);
+        const queryString = params.toString();
 
+        // Deep link: testapp://components/pages/auth/reset-password?access_token=...
+        const deeplink = `testapp://components/pages/auth/reset-password?${queryString}`;
+        console.log("deep link", deeplink);
+
+        // Mobil cihazda deep link aç
         window.location.href = deeplink;
       }
     </script>
