--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       function openApp() {
         const hash = window.location.hash || "";
 
-        const deeplink = "testapp:///components/pages/auth/login";
+        const deeplink = "yaninda:///components/pages/auth/login";
 
         window.location.href = deeplink;
       }
