--- a/reset-password.html
+++ b/reset-password.html
@@ -85,7 +85,6 @@
       }
     </style>
     <script>
-      // URL parametrelerinden email çek (varsa)
       function getQueryParam(key) {
         const params = new URLSearchParams(window.location.search);
         return params.get(key);
@@ -99,20 +98,15 @@
         }
       });
 
-      // UYGULAMAYI AÇ (DÜZELTİLMİŞ HALİ)
       function openApp() {
-        const hash = window.location.hash.substring(1); // #access_token=... kısmını al
+        const hash = window.location.hash.substring(1);
         if (!hash) return;
 
-        // Hash'i query string'e çevir: access_token=... → ?access_token=...
         const params = new URLSearchParams(hash);
         const queryString = params.toString();
 
-        // Deep link: testapp://components/pages/auth/reset-password?access_token=...
-        const deeplink = `testapp://components/pages/auth/reset-password?${queryString}`;
-        console.log("deep link", deeplink);
+        const deeplink = `yaninda://components/pages/auth/reset-password?${queryString}`;
 
-        // Mobil cihazda deep link aç
         window.location.href = deeplink;
       }
     </script>
